add loader and lockInput

--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <input type="text" id="search-box" />
+    <img src="./images/preloader.gif" class="preloader">
     <ul class="country-list">
       
     </ul>
